# leonardo-test-soc

./: .coveragerc  MANIFEST.in  README.rst  setup.cfg
docs/source/: conf.py  index.rst
leonardo_test_soc/: __init__.py
leonardo_test_soc/templates/widget/testsoc/: images.html  soc_default.html
leonardo_test_soc/widget/test_soc/: models.py
